<resources>
    <string name="app_name">Lime Notes</string>
    <string name="notes">Notes</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark theme</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="amount_notes">Notes found: %d</string>
    <string name="enter_note_text">Enter note text</string>
    <string name="note_details_header_insert">Create note</string>
    <string name="note_details_header_update">Edit note</string>
    <string name="delete">delete</string>
    <string name="clear_note_text_filter">clear_note_text_filter</string>
    <string name="category">category</string>
    <string name="add_your_first_category">Add your first category!</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="name">Name:</string>
    <string name="change_color">Change color</string>
    <string name="category_details_header_insert">Create category</string>
    <string name="category_details_header_update">Edit category</string>
    <string name="delete_all_categories">Delete all categories</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="done">Done</string>
    <string name="copy">copy</string>
    <string name="copied">Copied!</string>
    <string name="clipboard_note_text_label">Note text</string>
    <string name="share_note_text_title">Share note text:</string>
    <string name="no_category">No category</string>
    <string name="all">All</string>
    <string name="danger_actions">Danger actions</string>
    <string name="appearance">Appearance</string>
    <string name="dialog_delete_all_notes_title">Do you want to delete all notes?</string>
    <string name="dialog_delete_all_notes_msg">This action cannot be cancelled.</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_delete_all_categories_title">Do you want to delete all categories?</string>
    <string name="dialog_delete_all_categories_msg">This action cannot be cancelled. Notes of these categories will NOT be deleted.</string>
    <string name="about_app_caption">About app</string>
    <string name="about_app">Lime notes is a simple notes Android application. Without ADS and without in-app purchases.\n\nYou can create notes and add some categories for notes. Every note has text, date of creation and possible category. You can filter notes by their text or category name.\n\nYou can explore the source code of the app on GitHub:\nhttps://github.com/HolodTema/android-lime-notes</string>
    <string name="app_icon">app icon</string>
    <string name="app_version">Version %s</string>
    <string name="created_at">"Created at: %s"</string>

    <string name="dialog_delete_note_title">Delete this note?</string>
    <string name="dialog_delete_category_title">Delete this category?</string>
    <string name="dialog_delete_category_msg">Notes of this category will not be deleted.</string>
</resources>